--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <head>
 
-<script src="app.js"></script>
+
 </head>
 
 <body>
-  <h1>Did You Know?2</h1>
-<div onload="newFact()" id="newFact">
+  <h1>Did You Know?</h1>
+<div id="container">
+  <p id="newFact"></p>
 
 </div>
 
@@ -14,5 +15,5 @@
 </body>
 
 
-
+<footer><script src="app.js"></script></footer>
 </html>
